<resources>
    <string name="app_name">MaikProjects</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="ingresa_numeros">Ingresa numeros</string>
    <string name="linearlayout">linearlayout</string>
    <string name="relativecalc">RelativeCalc</string>
    <string name="linearcalc">linearcalc</string>
    <string name="rl_calc">RL_Calc</string>
    <string name="constraint1">Constraint!</string>
    <string name="constraint2">constraint2</string>
    <string name="boton_7">boton_7</string>
    <string name="boton_9">boton_9</string>
    <string name="dividir">/</string>
    <string name="resta">-</string>
    <string name="parentesis">( )</string>
    <string name="punto">.</string>
    <string name="suma">+</string>
    <string name="igual">=</string>
    <string name="c">c</string>
    <string name="x">x</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">iniciar sesion</string>
    <string name="olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="exponente">x^</string>
    <string name="modulo">%</string>
    <string name="empate">Hay un empate</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="edad">Edad</string>
    <string name="matricula">Matricula</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="intent_web">Intent Web</string>
    <string name="intent_contactos">Intent contactos</string>
    <string name="intent_llamada">Intent llamada</string>
    <string name="intent_google">Intent google</string>
    <string name="intent_voz">intent voz</string>
    <string name="intent_alarma">Intent alarma</string>
    <string name="button">Button</string>
    <string name="_7_intents">7 Intents</string>
    <string name="onCLick" />
    <string name="onclick">onCLick</string>
    <string name="gato">gato</string>
    <string name="intents">intents</string>
    <string name="descripcion">Descripcion</string>
    <string name="titulo_index">ACTIVIDADES DE TODO TIPO</string>
    <string name="textview">TextView</string>
    <string name="pokedez">Pokedez</string>
</resources>