<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_700">

    <EditText
        android:id="@+id/pantalla"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:hint="@string/ingresa_numeros"
        android:textSize="50sp"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/parentesis"
            android:textSize="30sp"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle,NestedWeights" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/exponente"
            android:textSize="30sp"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/modulo"
            android:textSize="30sp"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/c"
            android:textSize="30sp"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/one"
            android:text="@string/_1"
            android:textSize="30sp"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle,NestedWeights" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/two"
            android:text="@string/_2"
            android:textSize="30sp"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/three"
            android:text="@string/_3"
            android:textSize="30sp"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/entre"
            android:text="@string/dividir"
            android:textSize="30sp"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/four"
            android:text="@string/_4"
            android:textSize="30sp"
            android:backgroundTint="@color/purple_200"
        android:layout_weight="1"
            tools:ignore="ButtonStyle,NestedWeights" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/five"
            android:text="@string/_5"
            android:textSize="30sp"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/six"
            android:text="@string/_6"
            android:textSize="30sp"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/por"
            android:text="@string/x"
            android:textSize="30sp"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/seven"
            android:text="@string/_7"
            android:textSize="30sp"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle,NestedWeights" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/eight"
            android:text="@string/_8"
            android:textSize="30sp"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/nine"
            android:text="@string/_9"
            android:textSize="30sp"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/menos"
            android:text="@string/resta"
            android:textSize="30sp"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/punto"
            android:textSize="30sp"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle,NestedWeights" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/zero"
            android:text="@string/_0"
            android:textSize="30sp"
            android:backgroundTint="@color/purple_200"
        android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/igual"
            android:text="@string/igual"
            android:textSize="30sp"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/mas"
            android:text="@string/suma"
            android:textSize="30sp"
            android:backgroundTint="@color/teal_200"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>



</LinearLayout>