<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn1"
        android:text="@string/linearlayout"
        android:background="@color/purple_200"
        android:layout_gravity="start|top"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn2"
        android:text="@string/relativecalc"
        android:background="@color/purple_200"
        android:layout_gravity="center_horizontal|top"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn3"
        android:text="@string/linearcalc"
        android:background="@color/purple_200"
        android:layout_gravity="end|top"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn4"
        android:text="@string/rl_calc"
        android:background="@color/purple_200"
        android:layout_gravity="center_vertical|start"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn5"
        android:text="@string/constraint1"
        android:background="@color/purple_200"
        android:layout_gravity="center"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn6"
        android:text="@string/constraint2"
        android:background="@color/purple_200"
        android:layout_gravity="center_vertical|end"
        tools:ignore="RtlHardcoded" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn7"
        android:text="@string/boton_7"
        android:background="@color/purple_200"
        android:layout_gravity="start|bottom"
        android:onClick="texto"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn8"
        android:text="boton_8"
        android:background="@color/purple_200"
        android:layout_gravity="center_horizontal|bottom"

        tools:ignore="HardcodedText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn9"
        android:text="@string/boton_9"
        android:background="@color/purple_200"
        android:layout_gravity="end|bottom"
        />

</FrameLayout>