<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/bienvenido"
        android:textSize="25sp"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/correo"
        android:textSize="25sp"
        android:layout_weight="1"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/contrase_a"
        android:textSize="25sp"
        android:layout_weight="1"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/iniciar_sesion"
        android:layout_margin="10dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/olvidaste_tu_contrasena"
        android:textColor="#0E8AEE"
        android:textAlignment="center"
        />



</LinearLayout>